log
Thu 09 May 2024 06:43:08 PM UTC: 
 tests:  1|8
total_score: 0/70
3fd5fbd
Thu 09 May 2024 06:45:21 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
6e85a24
Thu 09 May 2024 06:51:03 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
520e1cf
Thu 09 May 2024 06:54:27 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:93:11: error: expected ‘(’ before ‘{’ token
   93 |         if{
      |           ^
      |           (
treemap.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
103cfab
Thu 09 May 2024 06:55:27 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
67260c8
Thu 09 May 2024 06:57:40 PM UTC: 
 treemap.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
e5eb0c2
Thu 09 May 2024 06:58:21 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
f14db1a
